--- a/js/TexttestFixture.html
+++ b/js/TexttestFixture.html
@@ -2,50 +2,49 @@
 <html>
 <head>
 
-<title>Gilded Rose Texttest Fixture</title>
+    <title>Gilded Rose Texttest Fixture</title>
 
-<script type="text/javascript" src="lib/jquery-1.7.1/jquery-1.7.1.js"></script>
-<script type="text/javascript" src="src/gilded_rose.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.7.1/jquery-1.7.1.js"></script>
+    <script type="text/javascript" src="src/products.js"></script>
+    <script type="text/javascript" src="src/gilded_rose.js"></script>
 
-<script type="text/javascript">
-  $( document ).ready(function() {
+    <script type="text/javascript">        
+        $(document).ready(function () {
+            $('body').append('<p>OMGHAI!</p>');
 
-    $('body').append('<p>OMGHAI!</p>');
+            items.push(new Item(DEXTERITY_VEST, 10, 20));
+            items.push(new Item(AGED_BRIE, 2, 0));
+            items.push(new Item(ELIXIR_OF_MONGOOSE, 5, 7));
+            items.push(new Item(SULFURAS_HAND_OF_RAGNAROS, 0, 80));
+            items.push(new Item(SULFURAS_HAND_OF_RAGNAROS, -1, 80));
+            items.push(new Item(BACKSTAGE_PASSES, 15, 20));
+            items.push(new Item(BACKSTAGE_PASSES, 10, 49));
+            items.push(new Item(BACKSTAGE_PASSES, 5, 49));
+            items.push(new Item(CONJURED_MANA_CAKE, 3, 6));
 
-    items.push(new Item('+5 Dexterity Vest', 10, 20));
-    items.push(new Item('Aged Brie', 2, 0));
-    items.push(new Item('Elixir of the Mongoose', 5, 7));
-    items.push(new Item('Sulfuras, Hand of Ragnaros', 0, 80));
-    items.push(new Item('Sulfuras, Hand of Ragnaros', -1, 80));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 15, 20));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 10, 49));
-    items.push(new Item('Backstage passes to a TAFKAL80ETC concert', 5, 49));
-    // this conjured item does not work properly yet
-    items.push(new Item('Conjured Mana Cake', 3, 6));
+            var days = 2;
 
-    var days = 2;
+            for (var i = 0; i < days; i++) {
+                showHeaderFor(i);
+                showItemsFor(i);
+                update_quality();
+            }
 
-    for (var i = 0; i < days; i++) {
-      showHeaderFor(i);
-      showItemsFor(i);
-      update_quality();
-    }
+            function showHeaderFor(day) {
+                $('body').append('<p>-------- day ' + day + ' --------</p>');
+            }
 
-    function showHeaderFor(day) {
-      $('body').append('<p>-------- day ' + day + ' --------</p>');
-    }
+            function showItemsFor(day) {
+                $('body').append('<p>name, sellIn, quality</p>');
+                for (var j = 0; j < items.length; j++) {
+                    var item = items[j];
+                    $('body').append('<p>' + item.name + ', ' + item.sell_in + ', ' + item.quality + '</p>');
+                }
+                $('body').append('<br />');
+            }
 
-    function showItemsFor(day) {
-      $('body').append('<p>name, sellIn, quality</p>');
-      for (var j = 0; j < items.length; j++) {
-        var item = items[j];
-        $('body').append('<p>' + item.name + ', ' + item.sell_in + ', ' + item.quality + '</p>');
-      }
-      $('body').append('<br />');
-    }
-
-  });
-</script>
+        });
+    </script>
 
 </head>
 
